# agentic-loopkit

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: start_dashboard.py
agentic_govkit/: __init__.py
agentic_govkit/agents/: audit.py  community_trust.py  killswitch.py  learning.py
agentic_govkit/events/: models.py
agentic_govkit/loops/: conflict.py  council.py
agentic_loopkit/: __init__.py  bus.py  testing.py
agentic_loopkit/adapters/: __init__.py  base.py  clickup.py  community.py  git.py  slack.py
agentic_loopkit/agents/: base.py  failure_pattern.py  performance.py  problem_generator.py  projection.py
agentic_loopkit/dashboard/: __init__.py  app.py  constants.py  dependencies.py  ws.py
agentic_loopkit/dashboard/routes/: __init__.py  adapters.py  agents.py  chains.py  events.py  memory.py  streams.py
agentic_loopkit/events/: confidence.py  headlines.py  models.py  router.py  store.py
agentic_loopkit/loops/: outcome.py  plan.py  ralf.py  react.py  reflexion.py  self_harness.py  skillopt.py  utility.py
agentic_loopkit/utils/: time.py
dashboard/ui/: .gitignore  package.json  vite.config.ts
dashboard/ui/src/: App.tsx  index.css
dashboard/ui/src/components/graph/: EventChainGraph.tsx
dashboard/ui/src/components/layout/: EventDetailPanel.tsx  Sidebar.tsx
dashboard/ui/src/components/livetail/: LiveTail.tsx
dashboard/ui/src/components/table/: EventTable.tsx
dashboard/ui/src/components/timeline/: EventTimeline.tsx
dashboard/ui/src/hooks/: useApi.ts  useEventStream.ts
dashboard/ui/src/pages/: AdaptersPage.tsx  AgentsPage.tsx  ChainPage.tsx  EventsPage.tsx  MemoryPage.tsx  StreamsPage.tsx
dashboard/ui/src/stores/: filters.ts  graph.ts  livetail.ts
dashboard/ui/src/types/: events.ts
docs/: a2a-protocol-alignment.md  agent-testkit-design.md  agentic-governance-analysis.txt  architecture.md  cognitive-architecture-extensions.md  community-feed-trust-pathway.md  dashboard-architecture.md  dashboard-stack.md  event-catalog.md  governance-learning-agent.md  governance-projection-architecture.md  gps-wiki-lclm-harvest.md  idioms-adoption-plan.md  lclm-compressed-event-bus.md  mem0-appraisal.md  memorykit-design.md  polling-adapter-extension-pattern.md  problem-generator-design.md  session-artefact-v7-2-community-feed-adapter.md  skillopt-executor-design.md  tag-taxonomy-alignment.md  utility-executor-design.md
examples/: compass_skill_opt_demo.py
tests/: test_bus.py  test_bus_working_memory.py  test_harness.py
tests/adapters/: test_base.py  test_clickup.py  test_community.py  test_git.py  test_liveness.py  test_slack.py
tests/agents/: test_base.py  test_failure_pattern.py  test_memorykit_integration.py  test_performance.py  test_problem_generator.py  test_projection.py
tests/dashboard/: test_routes_agents_adapters.py  test_routes_chains.py  test_routes_events.py  test_routes_streams.py  test_ws.py
tests/events/: test_confidence.py  test_headlines.py  test_models.py  test_router.py  test_store.py
tests/examples/: test_compass_skill_opt_demo.py
tests/govkit/: test_audit_agent.py  test_community_trust.py  test_conflict_resolution.py  test_council.py  test_killswitch.py  test_learning_agent.py  test_module_boundaries.py
tests/loops/: test_outcome.py  test_plan.py  test_ralf.py  test_react.py  test_reflexion.py  test_self_harness.py  test_skillopt.py  test_utility.py
